fix(NovoDataTable): fixing scrollbar issue

--- a/projects/novo-elements/src/elements/data-table/data-table.component.scss
+++ b/projects/novo-elements/src/elements/data-table/data-table.component.scss
@@ -633,7 +633,7 @@ novo-data-table-pagination {
 }
 
 .dropdown-container.data-table-dropdown {
-  min-width: 230px;
+  min-width: 220px;
   max-width: 280px;
   max-height: 500px;
   overflow-x: hidden;
